feat: Complete production-ready implementation with enterprise features
✨ Major Features Added:
• Multi-tier security: rate limiting, input sanitization, CSRF protection
• Advanced monitoring: health checks, metrics, structured logging
• Admin dashboard API: authentication, request management, analytics
• Backup & recovery: automated backups, data export, restore capabilities
• Docker deployment: multi-stage builds, health checks, reverse proxy
• Comprehensive documentation: API docs, deployment guide, troubleshooting

🔒 Security Enhancements:
• Rate limiting: 5 support requests/15min, 100 general/15min, 20 admin/5min
• Security headers: HSTS, CSP, X-Frame-Options, X-Content-Type-Options
• Input validation and sanitization with XSS protection
• Admin authentication with configurable credentials

📊 Monitoring & Logging:
• 4 health endpoints: /health, /health/detailed, /health/ready, /health/live
• Structured logging with request tracking and error analysis
• Performance metrics: memory usage, system resources, application stats
• Security event logging and monitoring

💾 Data Management:
• Automated daily backups with configurable retention
• Manual backup/restore API endpoints
• CSV/JSON export with filtering and analytics
• Data integrity validation and cleanup policies

🛡️ Admin Features:
• Protected admin API with Basic Authentication
• Request management: pagination, search, filtering
• System administration: backup/restore, export, health monitoring
• Analytics dashboard with request statistics

🐳 Deployment & DevOps:
• Docker support with multi-stage builds and health checks
• Automated deployment scripts for Docker and direct deployment
• Nginx reverse proxy configuration with SSL support
• Production environment configuration and validation

📚 Documentation:
• Complete API documentation with examples
• Production deployment guide with multiple strategies
• Comprehensive troubleshooting guide with solutions
• Enhanced README with production features

✅ Validat

--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:server": "tsc server/index.ts --outDir dist/server --target es2020 --module commonjs",
+    "build:full": "npm run build && npm run build:server",
+    "start": "node server/index.js",
     "preview": "vite preview",
     "test": "vitest --run",
     "test:watch": "vitest",
     "lint": "tsc --noEmit",
     "test:e2e": "playwright test",
-    "dev:server": "tsx server/index.ts"
+    "dev:server": "tsx server/index.ts",
+    "backup": "bash scripts/backup.sh",
+    "deploy": "bash scripts/deploy.sh"
   },
   "dependencies": {
     "cors": "^2.8.5",
