--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,78 @@
+# ==============================================
+# Interview Helper - Environment Configuration
+# ==============================================
+
 # Server Configuration
-PORT=4000
 NODE_ENV=development
+PORT=4000
 
-# API URLs
+# ==============================================
+# Frontend Configuration (Client-side)
+# ==============================================
 VITE_SUPPORT_API_URL=http://localhost:4000/support
+VITE_APP_NAME=Interview Helper
+VITE_APP_VERSION=1.0.0
+VITE_ENABLE_ANALYTICS=false
 
-# Database Configuration
+# ==============================================
+# Database/Storage Configuration
+# ==============================================
 SUPPORT_QUEUE_FILE=data/support-queue.json
+BACKUP_INTERVAL_HOURS=24
+DATA_RETENTION_DAYS=365
 
+# ==============================================
 # Security Configuration
-CORS_ALLOWED_ORIGINS=http://localhost:5173
+# ==============================================
+CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
+REQUEST_TIMEOUT_MS=30000
+MAX_REQUEST_SIZE=10mb
+
+# ==============================================
+# Rate Limiting Configuration
+# ==============================================
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
+# ==============================================
 # Logging Configuration
+# ==============================================
 LOG_LEVEL=info
+ENABLE_REQUEST_LOGGING=true
 
-# Add other configuration as needed
+# ==============================================
+# Production Configuration (uncomment for production)
+# ==============================================
+# NODE_ENV=production
+# LOG_LEVEL=warn
+# CORS_ALLOWED_ORIGINS=https://yourdomain.com
+# ENABLE_REQUEST_LOGGING=false
+# BACKUP_INTERVAL_HOURS=12
+# RATE_LIMIT_MAX_REQUESTS=50
+
+# ==============================================
+# Docker/Container Configuration
+# ==============================================
+# SUPPORT_QUEUE_FILE=/app/data/support-queue.json
+
+# ==============================================
+# Monitoring & Analytics (optional)
+# ==============================================
+# SENTRY_DSN=your_sentry_dsn_here
+# ANALYTICS_KEY=your_analytics_key_here
+
+# ==============================================
+# Email Configuration (future enhancement)
+# ==============================================
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your_email@gmail.com
+# SMTP_PASS=your_app_password
+# EMAIL_FROM=Interview Helper <noreply@yourdomain.com>
+
+# ==============================================
+# Admin Configuration
+# ==============================================
+# ADMIN_USERNAME=admin
+# ADMIN_PASSWORD=secure_password_here
+# JWT_SECRET=your_jwt_secret_here
